# mailing_list

./: Cargo.toml  README.md
src/: MailerService.rs  db.rs  handlers.rs  mailerService.rs  main.rs  models.rs
