[package]
name = "mailing_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
serde_json = "1.0"
mongodb = "2.0"
futures = "0.3"
bcrypt = "0.9"
lettre = "0.10" # Bibliothèque SMTP
